<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_20">

        <TextView
            android:id="@+id/titleTV"
            style="@style/CommonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_20"
            android:text="@string/delete" />

        <TextView
            style="@style/CommonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:text="@string/deleteInfo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dp_20">

            <Button
                android:id="@+id/closeBtn"
                style="@style/CommonTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp_20"
                android:text="@string/close" />

            <Button
                android:id="@+id/deleteBtn"
                style="@style/CommonTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp_20"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>
</layout>