<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fButton_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E600B0FF"
        android:padding="@dimen/dp_30"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents"
        app:fabCustomSize="@dimen/dp_100"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fButton_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E600B0FF"
        android:padding="@dimen/dp_30"
        android:text="@string/join"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents"
        app:fabCustomSize="@dimen/dp_100"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fButton_1"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fButton_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E600B0FF"
        android:padding="@dimen/dp_30"
        android:text="@string/attendance"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents"
        app:fabCustomSize="@dimen/dp_100"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fButton_2"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fButton_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E600B0FF"
        android:padding="@dimen/dp_30"
        android:text="@string/allDelete"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents"
        app:fabCustomSize="@dimen/dp_100"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fButton_3"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fButton_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E600B0FF"
        android:padding="@dimen/dp_30"
        android:text="@string/load"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents"
        app:fabCustomSize="@dimen/dp_100"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fButton_4"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fButton_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E600B0FF"
        android:padding="@dimen/dp_30"
        android:text="@string/attendanceStatus"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents"
        app:fabCustomSize="@dimen/dp_100"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fButton_5"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>