<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/waitListTV"
                style="@style/CommonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waitList" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/closeDialogBtn"
                style="@style/CommonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/waitListRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5"
            tools:listitem="@layout/item_waitlist" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/waitList_1"
                    style="@style/CommonTextStyle"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:gravity="center"
                    android:text="@string/notConfirm"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/waitList_2"
                    style="@style/CommonTextStyle"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:gravity="center"
                    android:text="@string/notConfirm"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/waitList_3"
                    style="@style/CommonTextStyle"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:gravity="center"
                    android:text="@string/notConfirm"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/waitList_4"
                    style="@style/CommonTextStyle"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:gravity="center"
                    android:text="@string/notConfirm"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/confirmBtn"
                style="@style/CommonTextStyle"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:text="@string/confirm" />

        </LinearLayout>

    </LinearLayout>
</layout>